ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-world.com
    http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: hello-node
            port:
              number: 3000
      - path: /django
        pathType: Prefix
        backend:
          service:
            name: hello-django
            port:
              number: 8000
